Fix modal close alignment

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -20,7 +20,7 @@ body {
   margin: 0 auto;
   display: flex;
   position: fixed;
-  padding: 15px 10%;
+  padding: 0 10%;
   z-index: 4;
   align-items: center;
   transition: all 0.5s;
